Fix character spacing

--- a/src/App.scss
+++ b/src/App.scss
@@ -827,7 +827,7 @@ hr {
 }
 
 .Results__body {
-  padding: 2rem 1.25rem;
+  padding-top: 2rem;
 }
 
 @keyframes showIncomeCard {
